[package]
name = "freedit"
version = "0.6.0-rc.6"
edition = "2021"
license = "MIT"

[dependencies]
ammonia = "3"
askama = { version = "0.12", default-features = false }
atom_syndication = { version = "0.12", default-features = false }
axum = { version = "0.6", features = ["http2", "headers", "form", "query", "multipart", "tokio"], default-features = false }
axum-server = { version = "0.5", features = ["tls-rustls"] }
basic-toml = "*"
bincode = "2.0.0-rc.3"
cached = { version = "0.45.0", default-features = false, features = ["proc_macro"] }
captcha = { version = "0.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
data-encoding = "*"
fast2s = "0.3"
identicon = { git = "https://github.com/freedit-dev/identicon.git", default-features = false }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif"] }
img-parts = "0.3.0"
jieba-rs = "0.6.8"
latex2mathml = "0.2.3"
mozjpeg = "0.10.0"
nanoid = "0.4.0"
once_cell = "*"
pulldown-cmark = { version = "0.9", features = ["simd"], default-features = false }
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks"] }
ring = { version = "0.16.20", default-features = false }
rss = { version = "2.0", default-features = false }
rust-stemmers = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
snailquote = "0.3.1"
stop-words = "0.7.2"
syntect = { version = "5", features = ["regex-fancy", "default-syntaxes", "default-themes", "html"], default-features = false }
tantivy = "0.21.0"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.4.1", features = ["fs", "compression-br", "trace"] }
tracing = { version = "0.1", features = ["release_max_level_info", "max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1"
validator = { version = "0.16", features = ["derive"] }
whichlang = "0.1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
