[package]
name = "freedit"
version = "0.6.4-rc.2"
edition = "2021"
license = "MIT"

[dependencies]
ammonia = "3"
askama = { version = "0.12", default-features = false }
atom_syndication = "0.12"
axum = { version = "0.7.0", features = ["http2", "form", "query", "multipart", "tokio"], default-features = false }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
basic-toml = "*"
bincode = "2.0.0-rc.3"
cached = { version = "0.46.0", default-features = false, features = ["proc_macro", "ahash"] }
captcha = { version = "0.0", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
data-encoding = "*"
fast2s = "0.3"
futures-util = "0.3.29"
http = "1.0.0"
hyper = "1.0.1"
hyper-util = "0.1.1"
identicon = { git = "https://github.com/freedit-dev/identicon.git", default-features = false }
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif"] }
img-parts = "0.3.0"
indexmap = "2"
jieba-rs = "0.6.8"
latex2mathml = "0.2.3"
mozjpeg = "0.10.4"
nanoid = "0.4.0"
once_cell = "*"
pulldown-cmark = { version = "0.9", features = ["simd"], default-features = false }
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "socks"] }
ring = { version = "0.17.5", default-features = false }
rss = { version = "2.0", default-features = false }
rust-stemmers = "1.2.0"
rustls-pemfile = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
sled = "0.34.7"
snailquote = "0.3.1"
stop-words = "0.8.0"
syntect = { version = "5", features = ["regex-fancy", "default-syntaxes", "default-themes", "html"], default-features = false }
tantivy = "0.21.0"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-rustls = "0.24.1"
tower = { version = "0.4", features = ["timeout"] }
tower-http = { version = "0.5.0", features = ["fs", "compression-br", "trace"] }
tracing = { version = "0.1", features = ["release_max_level_info", "max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-segmentation = "1"
validator = { version = "0.16", features = ["derive"] }
whichlang = "0.1.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
rpath = false
