[package]
name = "freedit"
version = "0.9.0-alpha.0"
edition = "2024"
license = "MIT License"
rust-version = "1.91.0"

[dependencies]
ammonia = "4.1.2"
askama = "0.14.0"
atom_syndication = { version = "0.12", default-features = false }
axum = { version = "0.8.7", features = [
    "http1",
    "http2",
    "form",
    "query",
    "multipart",
    "tokio",
], default-features = false }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
basic-toml = "0.1"
bincode = "2"
cached = { version = "0.56", default-features = false, features = [
    "proc_macro",
    "ahash",
] }
captcha = { git = "https://github.com/freedit-dev/captcha.git", default-features = false }
data-encoding = "2.9"
fast2s = "0.3"
fjall = "2.11.2"
http = "1.4.0"
identicon = { git = "https://github.com/freedit-dev/identicon.git", default-features = false }
image = { version = "0.25.8", default-features = false, features = [
    "jpeg",
    "png",
    "gif",
] }
img-parts = "0.4.0"
include_dir = "0.7.4"
indexmap = "2"
infer = "0.19.0"
jieba-rs = "0.8.1"
jiff = { version = "0.2.15", default-features = false, features = ["std"] }
latex2mathml = "0.2.3"
mozjpeg = "0.10.13"
nanoid = "0.4.0"
pulldown-cmark = { version = "0.13.0", features = [
    "simd",
    "html",
], default-features = false }
rand = "0.9.2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "socks",
] }
ring = { version = "0.17", default-features = false }
rss = { version = "2.0", default-features = false }
rust-stemmers = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
snailquote = "0.3.1"
stop-words = "0.9"
syntect = { version = "5", features = [
    "regex-fancy",
    "default-syntaxes",
    "default-themes",
    "html",
], default-features = false }
tantivy = "0.25"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.8", features = [
    "fs",
    "compression-zstd",
    "trace",
] }
tracing = { version = "0.1", features = [
    "release_max_level_info",
    "max_level_info",
], default-features = false }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
], default-features = false }
unicode-segmentation = "1"
validator = { version = "0.20.0", features = ["derive"] }
whichlang = "0.1.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.6"

[dev-dependencies]
sled = "0.34.7"

[profile.release]
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
rpath = false

[profile.dev.package."*"]
debug = false
